fix overflow bug

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@
   visibility: hidden;
   width: 500px;
   height: 75px;
-  background-color: #4dd2ff;
+  background-color: #008ae6;
   color: white;
   font: Helvetica;
   border-radius: 5px;
